Bug 133654, param attribute not recognized in XHTML. Patch from jst, r=peterv, sr=heikki.